# libdvdcss

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  bootstrap  config.h.cm  configure  configure.ac  configure.in  libdvdcss.spec  libdvdcss.spec.in  libtool  mkinstalldirs
cmake/: dvdcss-config.cmake
debian/: .cvsignore  Makefile.am  Makefile.in  changelog  control  libdvdcss2.shlibs  rules
doc/: .cvsignore  Makefile.am  doxygen.cfg  doxygen.cfg.in  footer.html  header.html
m4/: attributes.m4
msvc/: .cvsignore  config.h  csstest.dsp  libdvdcss.dsp  libdvdcss.vcxproj  uwpapi.cpp  workspace.dsw
src/: .cvsignore  Makefile.am  Makefile.in  bsdi_dvd.h  bsdi_ioctl.c  common.h  config.h.in  css.c  css.h  csstables.h  device.c  device.h  dvdcss.h  error.c  ioctl.c  ioctl.h  libdvdcss.c  libdvdcss.h
src/dvdcss/: Makefile.in  dvdcss.h
test/: .cvsignore  Makefile.am  Makefile.in  csstest.c  dvd_region.c  test.c
